--- a/html/Facebook/facebook.css
+++ b/html/Facebook/facebook.css
@@ -55,7 +55,7 @@ div>form {
 
 }
 
-li {
+#f_ul>li {
     font-size: 16px;
     width: 315px;
     margin: 10px auto;
@@ -108,4 +108,15 @@ footer {
 }
 footer>ul>li{
     display: inline-block;
+    
+}
+#footer_ul{
+    text-align:  center;
+    margin: 14px;
+    font-size: 12px;
+}
+#footer_ul>li{
+    padding: 0 5px;
+    color: #a0a0a0;
+
 }
