스프링부트Board_파일업로드

--- a/spring/boot/SpringBootBoard/src/main/resources/templates/board/list.html
+++ b/spring/boot/SpringBootBoard/src/main/resources/templates/board/list.html
@@ -29,12 +29,14 @@
             <tbody>
             <tr th:each="board:${boardList}">
                 <td th:text="${board.bno}"></td>
-                <td th:text="${board.title}"></td>
+                <td><a th:text="${board.title}" th:href="@{/board/view(bno=${board.bno},p=${listPage.pageNum})}"></a></td>
                 <td th:text="${board.regdate}"></td>
                 <td th:text="${board.updatedate}"></td>
             </tr>
             </tbody>
         </table>
+
+
         <nav aria-label="...">
             <ul class="pagination">
                 <th:block th:if="${listPage.prev}">
@@ -42,18 +44,24 @@
                         <a class="page-link" th:href="@{/board/list(p=${listPage.startNum-1})}">&laquo;</a>
                     </li>
                 </th:block>
-                <th:block th:each="num : ${#numbers.sequence(listPage.startNum,listPage.endNum)}">
-                    <li class="page-item">
+                <th:block th:each="num : ${#numbers.sequence(listPage.startNum,listPage.endNum)}"
+                          th:with="active=${listPage.pageNum==num?'active':''}">
+                    <li class="page-item" th:classappend="${active}">
                         <a class="page-link" th:href="@{/board/list(p=${num})}" th:text="${num}"></a>
                     </li>
                 </th:block>
                 <th:block th:if="${listPage.next}">
-                    <li class="page-item" >
+                    <li class="page-item">
                         <a class="page-link" th:href="@{/board/list(p=${listPage.endNum+1})}">&raquo;</a>
                     </li>
                 </th:block>
             </ul>
         </nav>
+        <!--글쓰기 버튼-->
+        <div class="text-end">
+            <a href="/board/write" class="btn btn-primary">글쓰기</a>
+        </div>
+
     </div>
 </div>
 
