--- a/spring/boot/SpringBootBoard/src/main/resources/templates/board/view.html
+++ b/spring/boot/SpringBootBoard/src/main/resources/templates/board/view.html
@@ -8,16 +8,18 @@
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
-<!--nav영역 시작-->
+
+<!-- nav 영역 시작-->
 <div th:replace="fragment/nav"></div>
-<div class="card m-4">
+
+
+<div class="card m-3">
     <div class="card-header">
         Board View
     </div>
     <div class="card-body">
-        <div th:text="${boardView}"></div>
-        <div th:text="${curretPageNum}"></div>
-        <table class="table ">
+
+        <table class="table border-top-1">
             <tr>
                 <td class="col-2 text-center bg-light">제목</td>
                 <td th:text="${boardView.title}"></td>
@@ -33,8 +35,8 @@
             <tr>
                 <td class="col-2 text-center bg-light">첨부사진</td>
                 <td>
-                    <th:block th:if="${boardView.photo!=null}">
-                        <img th:src="@{/upload/photo/{name}(name=${boardView.photo})}" width="300px">
+                    <th:block th:if="${boardView.photo != null}">
+                        <img th:src="@{/upload/photo/{name}(name=${boardView.photo})}" width="300">
                     </th:block>
                 </td>
             </tr>
@@ -47,17 +49,60 @@
                 <td th:text="${boardView.updatedate}"></td>
             </tr>
 
-
         </table>
+
         <div class="text-end">
-            <a class="btn btn-warning" th:href="@{/board/edit(bno=${boardView.bno},p=${curretPageNum})}">수정</a>
+            <a class="btn btn-warning" th:href="@{/board/edit(bno=${boardView.bno}, p=${currentPageNum})}">수정</a>
             <a class="btn btn-danger" th:onclick="'deleteBoard('+${boardView.bno}+')'">삭제</a>
-            <a class="btn btn-primary" th:href="@{/board/list/(p=${curretPageNum})}">리스트</a>
+            <a class="btn btn-primary" th:href="@{/board/list(p=${currentPageNum})}">리스트</a>
         </div>
+
+
+        <!-- 댓글 영역 시작 -->
+
+        <div class="card m-2 my-2">
+            <div class="card-header">
+                댓글
+            </div>
+            <div class="card-body">
+
+                <!--댓글 작성 영역-->
+
+                <div class="p-3 border-bottom">
+                    <h5 class="title my-2">댓글 작성</h5>
+                    <div class="mb-3">
+                        <label class="form-label">작성자</label>
+                        <input type="text" class="form-control" id="replyer">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">내용</label>
+                        <textarea class="form-control" rows="3" id="reply"></textarea>
+                    </div>
+                    <div class="mb-3">
+                        <input type="submit" value="등록" id="btn_reply" class="form-control btn btn-primary">
+                    </div>
+                </div>
+
+
+                <!--댓글 리스트 영역-->
+                <table class="table">
+                    <tbody id="replyList">
+
+                    </tbody>
+                </table>
+
+
+            </div>
+        </div>
+
+
     </div>
 </div>
+
 <script>
+
     function deleteBoard(bno) {
+
         if (confirm("삭제하시겠습니까?")) {
             location.href = '/board/delete?bno=' + bno;
         }
@@ -70,5 +115,86 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+<script th:inline="javascript">
+
+    var bno = [[${boardView.bno}]]
+
+</script>
+
+<script>
+
+    let replyList;
+
+    document.addEventListener('DOMContentLoaded', () => {
+
+        // 댓글 리스트 출력 영역 캐스팅
+        replyList = document.querySelector('#replyList')
+
+        // 댓글 작성 버튼
+        const btn_reply = document.querySelector("#btn_reply")
+
+
+        // 버튼 이벤트 등록
+        btn_reply.addEventListener('click', () => {
+
+
+
+
+        })
+
+        // 페이지가 로드되면 리스트를 출력
+        setList()
+
+
+    })
+
+    function setList() {
+
+        // 비동기 통신 :댓글 리스트
+        axios.get('/reply/' + bno)
+            .then(res => {
+
+                console.log('response', res.data)
+
+                let list = res.data;
+
+                list.forEach((reply, index) => {
+                    // 새로운 tr을 만들어서 replyIndex 영역에 추가
+
+                    const newTR = document.createElement('tr')
+
+                    let html = '<td class="col-2">' + reply.replyer + '</td>'
+                    html += '<td class="col">' + reply.reply + '</td>'
+                    html += '<td class="col-2">' + reply.replydate + '</td>'
+                    html += '<td class="col-2"> ' +
+                        '<a href="javascript:showEditModal(' + reply.rno + ')" class="badge bg-warning text-decoration-none">수정</a> ' +
+                        '<a href="javascript:deleteReply(' + reply.rno + ')" class="badge bg-danger text-decoration-none">삭제</a> ' +
+                        '</td>'
+
+                    newTR.innerHTML = html
+                    newTR.setAttribute('class', 'fs-6 text-center')
+                    newTR.setAttribute('tr-index', reply.rno)
+
+                    // 부모 태그에 요소 추가
+                    replyList.appendChild(newTR)
+
+                })
+            })
+            .catch(err => {
+                console.log(err)
+            })
+
+    }
+
+    function insertReply() {
+
+
+    }
+
+</script>
+
+
 </body>
 </html>
