--- a/spring/boot/SpringBootBoard/src/main/resources/templates/board/edit.html
+++ b/spring/boot/SpringBootBoard/src/main/resources/templates/board/edit.html
@@ -4,22 +4,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
-<!--nav영역 시작-->
+
+<!-- nav 영역 시작-->
 <div th:replace="fragment/nav"></div>
-<div class="card m-4">
+
+
+<div class="card m-3">
     <div class="card-header">
         Board Write
     </div>
     <div class="card-body">
-        <form method="post" enctype="multipart/form-data"> <!--enctype="multipart/form-data"있어야 파일업로드 처리가능-->
+
+        <form method="post" enctype="multipart/form-data">
 
             <input type="hidden" name="bno" th:value="${board.bno}">
             <input type="hidden" name="curPageNum" th:value="${curPageNum}">
-
 
             <div class="mb-3">
                 <label for="title" class="form-label">제목</label>
@@ -31,19 +33,16 @@
             </div>
             <div class="mb-3">
                 <label for="content" class="form-label">내용</label>
-                <textarea class="form-control" id="content" name="content" rows="3"
-                          th:text="${board.content}"></textarea>
+                <textarea class="form-control" id="content" name="content" rows="3" th:text="${board.content}"></textarea>
             </div>
-
-            <div class="mb-3">  <!--파일업로드-->
-                <input type="hidden" name="oldFile" th:value="${board.photo}">
+            <div class="mb-3">
+                <input type="hidden" name="oldFile" th:value="${board.photo}" >
                 <label for="formFile" class="form-label">사진</label>
                 <input class="form-control" type="file" id="formFile" name="formFile">
             </div>
-            <div class="mb-3">  <!--파일업로드-->
-                <input class=" btn btn-primary" type="submit">
+            <div class="mb-3">
+                <input class="btn btn-primary" type="submit">
             </div>
-
 
         </form>
 
@@ -51,8 +50,7 @@
     </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
