--- a/spring/boot/SpringBootBoard/src/main/resources/templates/board/list.html
+++ b/spring/boot/SpringBootBoard/src/main/resources/templates/board/list.html
@@ -4,20 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
-<!--nav영역 시작-->
+
+<!-- nav 영역 시작-->
 <div th:replace="fragment/nav"></div>
-<div class="card m-4">
+
+
+<div class="card m-3">
     <div class="card-header">
-        Board
+        Board List
     </div>
-    <div class="card-body ">
+    <div class="card-body">
 
-
-        <table class="table table-bordered text-center">
+        <table class="table  table-bordered text-center">
             <thead class="bg-primary text-white">
             <tr>
                 <th class="col-1">번호</th>
@@ -26,37 +27,50 @@
                 <th class="col-2">등록일</th>
             </tr>
             </thead>
+
             <tbody>
-            <tr th:each="board:${boardList}">
-                <td th:text="${board.bno}"></td>
-                <td><a th:text="${board.title}" th:href="@{/board/view(bno=${board.bno},p=${listPage.pageNum})}"></a></td>
-                <td th:text="${board.regdate}"></td>
-                <td th:text="${board.updatedate}"></td>
+            <tr th:each="board : ${listPage.list}">
+                <td th:text="${board.bno}">1</td>
+                <td>
+                    <a th:text="${board.title}" th:href="@{/board/view(bno=${board.bno},p=${listPage.pageNum})}"></a>
+                    <span th:text="${board.replycnt}" class="badge bg-danger"></span>
+                </td>
+                <td th:text="${board.writer}">테스트 작성</td>
+                <td th:text="${board.regdate}">2022-12-07</td>
             </tr>
             </tbody>
+
         </table>
 
-
-        <nav aria-label="...">
+        <!--페이징 시작-->
+        <nav aria-label="">
             <ul class="pagination">
+
                 <th:block th:if="${listPage.prev}">
-                    <li class="page-item ">
+                    <li class="page-item">
                         <a class="page-link" th:href="@{/board/list(p=${listPage.startNum-1})}">&laquo;</a>
                     </li>
                 </th:block>
-                <th:block th:each="num : ${#numbers.sequence(listPage.startNum,listPage.endNum)}"
+
+
+
+                <th:block th:each="num : ${#numbers.sequence(listPage.startNum, listPage.endNum)}"
                           th:with="active=${listPage.pageNum==num?'active':''}">
                     <li class="page-item" th:classappend="${active}">
                         <a class="page-link" th:href="@{/board/list(p=${num})}" th:text="${num}"></a>
                     </li>
                 </th:block>
+
                 <th:block th:if="${listPage.next}">
                     <li class="page-item">
                         <a class="page-link" th:href="@{/board/list(p=${listPage.endNum+1})}">&raquo;</a>
                     </li>
                 </th:block>
+
+
             </ul>
         </nav>
+
         <!--글쓰기 버튼-->
         <div class="text-end">
             <a href="/board/write" class="btn btn-primary">글쓰기</a>
@@ -65,8 +79,7 @@
     </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
