--- a/spring/boot/SpringBootBoard/src/main/resources/templates/fragment/nav.html
+++ b/spring/boot/SpringBootBoard/src/main/resources/templates/fragment/nav.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
+
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="/board/list">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -13,7 +14,7 @@
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Board</a>
+          <a class="nav-link" href="/board/list">Board</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">DEPT</a>
@@ -22,28 +23,29 @@
           <a class="nav-link" href="#">EMP</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-             aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Account
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">로그인</a></li>
             <li><a class="dropdown-item" href="#">회원가입</a></li>
-            <!--<li>
-                <hr class="dropdown-divider">
-            </li>-->
+            <!--<li><hr class="dropdown-divider"></li>-->
             <li><a class="dropdown-item" href="#">로그아웃</a></li>
           </ul>
         </li>
-        <!--       <li class="nav-item">
-                   <a class="nav-link disabled">Disabled</a>
-               </li>-->
+        <!--        <li class="nav-item">-->
+        <!--          <a class="nav-link disabled">Disabled</a>-->
+        <!--        </li>-->
       </ul>
-      <!--      <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>-->
+      <!--<form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>-->
     </div>
   </div>
 </nav>
+
+
+
+
 </html>
