--- a/spring/boot/SpringBootBoard/src/main/resources/templates/board/view.html
+++ b/spring/boot/SpringBootBoard/src/main/resources/templates/board/view.html
@@ -1,319 +1,166 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap demo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
 
-<!-- nav 영역 시작-->
-<div th:replace="fragment/nav"></div>
+  <!-- nav 영역 시작-->
+  <div th:replace="fragment/nav"></div>
 
 
-<div class="card m-3">
+  <div class="card m-3">
     <div class="card-header">
-        Board View
+      Board View
     </div>
     <div class="card-body">
 
-        <table class="table border-top-1">
-            <tr>
-                <td class="col-2 text-center bg-light">제목</td>
-                <td th:text="${boardView.title}"></td>
-            </tr>
-            <tr>
-                <td class="col-2 text-center bg-light">작성자</td>
-                <td th:text="${boardView.writer}"></td>
-            </tr>
-            <tr>
-                <td class="col-2 text-center bg-light">내용</td>
-                <td th:text="${boardView.content}"></td>
-            </tr>
-            <tr>
-                <td class="col-2 text-center bg-light">첨부사진</td>
-                <td>
-                    <th:block th:if="${boardView.photo != null}">
-                        <img th:src="@{/upload/photo/{name}(name=${boardView.photo})}" width="300">
-                    </th:block>
-                </td>
-            </tr>
-            <tr>
-                <td class="col-2 text-center bg-light">작성일</td>
-                <td th:text="${boardView.regdate}"></td>
-            </tr>
-            <tr>
-                <td class="col-2 text-center bg-light">수정일</td>
-                <td th:text="${boardView.updatedate}"></td>
-            </tr>
+      <table class="table border-top-1" >
+        <tr>
+          <td class="col-2 text-center bg-light">제목</td>
+          <td th:text="${boardView.title}"></td>
+        </tr>
+        <tr>
+          <td class="col-2 text-center bg-light">작성자</td>
+          <td th:text="${boardView.writer.username}"></td>
+        </tr>
+        <tr>
+          <td class="col-2 text-center bg-light">내용</td>
+          <td th:text="${boardView.content}"></td>
+        </tr>
+        <tr>
+          <td class="col-2 text-center bg-light">첨부사진</td>
+          <td>
+            <th:block th:if="${boardView.photo != null}">
+            <img th:src="@{/upload/photo/{name}(name=${boardView.photo})}" width="300">
+            </th:block>
+          </td>
+        </tr>
+        <tr>
+          <td class="col-2 text-center bg-light">작성일</td>
+          <td th:text="${boardView.regdate}"></td>
+        </tr>
+        <tr>
+          <td class="col-2 text-center bg-light">수정일</td>
+          <td th:text="${boardView.updatedate}"></td>
+        </tr>
 
-        </table>
+      </table>
 
-        <div class="text-end">
-            <a class="btn btn-warning" th:href="@{/board/edit(bno=${boardView.bno}, p=${currentPageNum})}">수정</a>
-            <a class="btn btn-danger" th:onclick="'deleteBoard('+${boardView.bno}+')'">삭제</a>
-            <a class="btn btn-primary" th:href="@{/board/list(p=${currentPageNum})}">리스트</a>
+      <div class="text-end">
+        <th:block th:if="${#authentication.principal.boardMember.idx} == ${boardView.writer.idx}">
+        <a class="btn btn-warning" th:href="@{/board/edit(bno=${boardView.bno}, p=${currentPageNum})}">수정</a>
+        <a class="btn btn-danger" th:onclick="'deleteBoard('+${boardView.bno}+')'">삭제</a>
+        </th:block>
+
+        <a class="btn btn-primary" th:href="@{/board/list(p=${currentPageNum})}">리스트</a>
+      </div>
+
+
+      <!-- 댓글 영역 시작 -->
+
+      <div class="card m-2 my-2">
+        <div class="card-header">
+          댓글
         </div>
+        <div class="card-body">
 
+          <!--댓글 작성 영역-->
 
-        <!-- 댓글 영역 시작 -->
-
-        <div class="card m-2 my-2">
-            <div class="card-header">
-                댓글
+          <div class="p-3 border-bottom">
+            <h5 class="title my-2">댓글 작성</h5>
+            <div class="mb-3">
+              <label class="form-label">작성자</label>
+              <input type="text" class="form-control" th:value="${#authentication.principal.boardMember.username}" readonly>
+              <input type="hidden" class="form-control" id="replyer" th:value="${#authentication.principal.boardMember.idx}" >
             </div>
-            <div class="card-body">
-
-                <!--댓글 작성 영역-->
-
-                <div class="p-3 border-bottom">
-                    <h5 class="title my-2">댓글 작성</h5>
-                    <div class="mb-3">
-                        <label class="form-label">작성자</label>
-                        <input type="text" class="form-control" id="replyer">
-                    </div>
-                    <div class="mb-3">
-                        <label class="form-label">내용</label>
-                        <textarea class="form-control" rows="3" id="reply"></textarea>
-                    </div>
-                    <div class="mb-3">
-                        <input type="submit" value="등록" id="btn_reply" class="form-control btn btn-primary">
-                    </div>
-                </div>
-
-
-                <!--댓글 리스트 영역-->
-                <table class="table">
-                    <tbody id="replyList">
-
-                    </tbody>
-                </table>
-
-
+            <div class="mb-3">
+              <label class="form-label">내용</label>
+              <textarea class="form-control" rows="3" id="reply"></textarea>
             </div>
+            <div class="mb-3">
+              <input type="submit" value="등록" id="btn_reply" class="form-control btn btn-primary">
+            </div>
+          </div>
+
+
+          <!--댓글 리스트 영역-->
+          <table class="table">
+            <tbody id="replyList">
+
+            </tbody>
+          </table>
+
+
+
         </div>
+      </div>
 
 
     </div>
-</div>
+  </div>
 
 
-<!-- Modal -->
-<div class="modal fade" id="replyEditModal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel"
-     aria-hidden="true">
+  <!-- Modal -->
+  <div class="modal fade" id="replyEditModal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="staticBackdropLabel">댓글 수정</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <div class="mb-3">
-                    <label class="form-label">작성자</label>
-                    <input type="text" class="form-control" id="ereplyer" readonly>
-                    <input type="hidden" id="erno">
-                    <input type="hidden" id="ereplydate">
-                </div>
-                <div class="mb-3">
-                    <label class="form-label">내용</label>
-                    <textarea class="form-control" rows="3" id="ereply"></textarea>
-                </div>
-            </div>
-            <div class="modal-footer">
-
-                <button type="button" id="btn_edit" class="btn btn-primary">수정</button>
-            </div>
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="staticBackdropLabel">댓글 수정</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
+        <div class="modal-body">
+          <div class="mb-3">
+            <label class="form-label">작성자</label>
+            <input type="text" class="form-control" id="ereplyerName" readonly>
+            <input type="hidden" id="ereplyer" >
+            <input type="hidden" id="erno">
+            <input type="hidden" id="ereplydate">
+          </div>
+          <div class="mb-3">
+            <label class="form-label">내용</label>
+            <textarea class="form-control" rows="3" id="ereply"></textarea>
+          </div>
+        </div>
+        <div class="modal-footer">
+
+          <button type="button" id="btn_edit" class="btn btn-primary">수정</button>
+        </div>
+      </div>
     </div>
-</div>
+  </div>
 
 
-<script>
 
-    function deleteBoard(bno) {
+  <script>
 
-        if (confirm("삭제하시겠습니까?")) {
-            location.href = '/board/delete?bno=' + bno;
-        }
+    function deleteBoard(bno){
+
+      if(confirm("삭제하시겠습니까?")){
+          location.href = '/board/delete?bno='+bno;
+      }
 
     }
 
-</script>
+  </script>
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
-<script
-        src="https://code.jquery.com/jquery-1.12.4.js"
-        integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU="
-        crossorigin="anonymous"
-></script>
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.12.4.js" integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU=" crossorigin="anonymous"></script>
 
-<script th:inline="javascript">
+
+  <script th:inline="javascript">
 
     var bno = [[${boardView.bno}]]
+    var midx = [[${midx}]]
 
-</script>
+  </script>
 
-<script>
-
-
-    let editModal;
-
-    $().ready(function () {
-
-        // 댓글 리스트 출력 영역 캐스팅
-
-        $('#btn_reply').click(insertReply);
-        $('#btn_edit').click(editReply);
-
-        editModal = new bootstrap.Modal('#replyEditModal')
-
-
-        // 페이지가 로드되면 리스트를 출력
-        setList()
-
-    })
-
-    function setList() {
-        $.ajax({
-            url: '/reply/' + bno,
-            type: 'GET',
-            dataType: "json",
-            contentType: "application/json",
-            success: function (data) {
-                $.each(data, function (index, reply) {
-                    let html = '<td class="col-2">' + reply.replyer + '</td>'
-                    html += '<td class="col">' + reply.reply + '</td>'
-                    html += '<td class="col-2">' + reply.replydate + '</td>'
-                    html += '<td class="col-2"> ' +
-                        '<a href="javascript:showEditModal(' + reply.rno + ')" class="badge bg-warning text-decoration-none">수정</a> ' +
-                        '<a href="javascript:deleteReply(' + reply.rno + ')" class="badge bg-danger text-decoration-none">삭제</a> ' +
-                        '</td>'
-                    $('<tr></tr>').html(html).addClass('fs-6 text-center').attr('tr-index', reply.rno).appendTo($('#replyList'))
-
-                })
-            },
-            error: function (request, status, error) {
-                console.log(error);
-            }
-        });
-
-
-    }
-
-    function insertReply() {
-        // 서버로 전송할 payload
-        const payload = {
-            bno: bno,
-            reply: $('#reply').val(),
-            replyer: $('#replyer').val()
-        }
-
-        $.ajax({
-            url: '/reply/',
-            type: 'POST',
-            dataType: "json",
-            contentType: "application/json",
-            data: JSON.stringify(payload),
-            success: function (reply) {
-                let html2 = '<td class="col-2">' + reply.replyer + '</td>'
-                html2 += '<td class="col">' + reply.reply + '</td>'
-                html2 += '<td class="col-2">' + reply.replydate + '</td>'
-                html2 += '<td class="col-2"> ' +
-                    '<a href="javascript:showEditModal(' + reply.rno + ')" class="badge bg-warning text-decoration-none">수정</a> ' +
-                    '<a href="javascript:deleteReply(' + reply.rno + ')" class="badge bg-danger text-decoration-none">삭제</a> ' +
-                    '</td>'
-                $('<tr></tr>').html(html2).addClass('fs-6 text-center').attr('tr-index', reply.rno).appendTo($('#replyList'))
-
-            },
-
-        });
-    };
-
-    function deleteReply(rno) {
-
-        if (!confirm('삭제하시겠습니까?')) {
-            return;
-        }
-
-        $.ajax({
-            url: '/reply/' + rno,
-            type: 'DELETE',
-            async: true,
-            contentType: 'application/json',
-            success: function (data) {
-                if (data == 1) {
-                    // 화면에서 tr-index == rno 행을삭제
-                    // 삭제 대상 행
-
-                    $('tr[tr-index="' + rno + '"]').remove();
-
-                    alert('삭제되었습니다.')
-                } else {
-                    alert('삭제할 대상이 존재하지 않습니다.')
-                }
-            },
-            error: function (request, status, error) {
-                alert("code:" + request.status + "\n" + "message:" + request.responseText + "\n" + "error:" + error);
-                $('.wrap-loading').addClass('display-none');
-            }
-
-        })
-
-    }
-
-
-    function showEditModal(rno) {
-
-        editModal.show()
-
-        const editTD = $('tr[tr-index="' + rno + '"]>td')
-
-        //editTD[0].textContent='변경된 데이터'
-
-        console.log(editTD[0].textContent)
-        console.log(editTD[1].textContent)
-        console.log(editTD[2].textContent)
-
-
-        $('#erno').val(rno)
-        $('#ereplyer').val(editTD[0].textContent)
-        $('#ereply').val(editTD[1].textContent)
-        $('#ereplydate').val(editTD[2].textContent)
-
-    }
-
-    function editReply() {
-        // 서버로 전송할 payload
-        // put => 전체 데이터의 변경, 모든 데이터를 서버로 전송, 값이 없는 경우 기본값으로 저장
-        const payload = {
-            bno: bno,
-            rno: $('#erno').val(),
-            reply: $('#ereply').val(),
-            replyer: $('#ereplyer').val(),
-            replydate: $('#ereplydate').val()
-
-        }
-        $.ajax({
-            url: '/reply/' + payload.rno,
-            type: 'PUT',
-            data: JSON.stringify(payload),
-            dataType: 'json',
-            contentType: 'application/json',
-            success: function () {
-                $('tr[tr-index="' + payload.rno + '"]>td')[1].textContent =payload.reply
-                editModal.hide()
-            }
-        })
-    }
-
-
-</script>
+  <script src="/js/reply_jquery.js"></script>
 
 
 </body>
