--- a/spring/boot/SpringBootBoard/src/main/resources/templates/fragment/nav.html
+++ b/spring/boot/SpringBootBoard/src/main/resources/templates/fragment/nav.html
@@ -4,7 +4,7 @@
 
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/board/list">Navbar</a>
+    <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -27,10 +27,23 @@
             Account
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">로그인</a></li>
-            <li><a class="dropdown-item" href="#">회원가입</a></li>
+
+            <!--<li sec:authroize="isAuthenticated()">
+              <span sec:authentication="principal.boardMember"></span>
+            </li>-->
+            <li sec:authorize="isAuthenticated()">
+              <span sec:authentication="principal.boardMember.username"></span>
+            </li>
+            <li sec:authorize="isAuthenticated()">
+              <span sec:authentication="principal.boardMember.userid"></span>
+            </li>
+            <li sec:authorize="isAuthenticated()"><a class="dropdown-item" href="/auth/logout">로그아웃</a></li>
+
+            <li sec:authorize="!isAuthenticated()"><a class="dropdown-item" href="/auth/login">로그인</a></li>
+
+            <!--<li><a class="dropdown-item" href="#">회원가입</a></li>-->
             <!--<li><hr class="dropdown-divider"></li>-->
-            <li><a class="dropdown-item" href="#">로그아웃</a></li>
+
           </ul>
         </li>
         <!--        <li class="nav-item">-->
